--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Nate V</h1>
         <p class="preferred-name">Preferred name: Nathaniel</p>
         <div class="photo-container">
-            <img src="https://cdn.discordapp.com/attachments/1001578805963538518/1340807241837576314/20250215_231959.png?ex=67b3b38d&is=67b2620d&hm=d43789b269ac7bbecd5c63393e54201d115bba9d2824d4978464ec847cddc6dc&" alt="Nate" class="profile-photo">
+            <img src="https://media.discordapp.net/attachments/1240444633373347841/1346272922188386454/me.png?ex=67c795dd&is=67c6445d&hm=dbaeb96917deec8af2145021353fe40e2e6fbea3a3f00968c4922d401aac0de7&=&format=webp&quality=lossless&width=656&height=875" alt="Nate" class="profile-photo">
         </div>
         <p>Email: <a href="mailto:nathanielgvorisek@lewisu.edu">nathanielgvorisek@lewisu.edu</a></p>
         <p>Discord: marejuiceenjoyer is my username</p>
